# c-pong

./: .gitignore  Makefile  entities.h  main.c  meson.build  renderer.c  window.h
include/: button.h  config.h  drop_down.h  entities.h  game.h  label.h  layout.h  main_menu.h  player.h  playfield.h  renderer.h  settings.h  state-manager.h  state_manager.h  utils.h  window.h
include/ui/: button.h  drop-down.h  factory.h  label.h  layout.h  main-menu.h  settings-menu.h
include/utils/: layout.h  settings.h  state-manager.h  string-array.h  utils.h
src/: layout.c  main.c  main_menu.c  player.c  playfield.c  renderer.c  settings.c  state-manager.c  state_manager.c  utils.c
src/ui/: button.c  drop-down.c  factory.c  label.c  layout.c  main-menu.c  main_menu.c  settings-menu.c
src/utils/: layout.c  settings.c  state-manager.c  string-array.c
